Fixed vertical alignment in both Chrome and Firefox.

--- a/core/app/assets/stylesheets/tour/waiting_list.css.less
+++ b/core/app/assets/stylesheets/tour/waiting_list.css.less
@@ -40,4 +40,9 @@
       }
     }
   }
+
+  [class^="icon-"], [class*=" icon-"] {
+    vertical-align: middle;
+    margin-top: -4px;
+  }
 }
